# barcode-intermediate-results

./: BarcodeReaderDemo.cpp  CMakeLists.txt  README.md
lib/Windows/x86/: DBRx86.lib
